--- a/package.json
+++ b/package.json
@@ -6,11 +6,26 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.1.3",
+    "connect-flash": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-messages": "*",
+    "express-session": "^1.15.6",
+    "express-validator": "*",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "jquery": "^3.3.1",
+    "mongodb": "*",
+    "mongoose": "*",
+    "morgan": "~1.9.0",
+    "multer": "*",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*",
+    "popper.js": "^1.14.4",
+    "serve-favicon": "*"
   }
 }
