--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-flash": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.0.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-messages": "*",
