Adding Twilio dependency

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-local": "*",
     "popper.js": "^1.14.4",
     "requestify": "^0.2.5",
-    "serve-favicon": "*"
+    "serve-favicon": "*",
+    "twilio": "^3.21.0"
   }
 }
