--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express-messages": "*",
     "express-session": "^1.15.6",
     "express-validator": "*",
+    "get-uri": "2.0.2",
     "http-errors": "~1.6.2",
+    "joi": "^14.0.6",
     "jquery": "^3.3.1",
     "mongodb": "*",
     "mongoose": "*",
@@ -32,7 +34,6 @@
     "popper.js": "^1.14.4",
     "requestify": "^0.2.5",
     "serve-favicon": "*",
-    "twilio": "^3.21.0",
-    "get-uri": "2.0.2"
+    "twilio": "^3.21.0"
   }
 }
