--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "express-validator": "*",
     "get-uri": "2.0.2",
+    "hashmap": "^2.3.0",
     "http-errors": "~1.6.2",
     "joi": "^14.0.6",
     "jquery": "^3.3.1",
@@ -27,6 +28,7 @@
     "mongoose": "*",
     "morgan": "~1.9.0",
     "multer": "*",
+    "node-schedule": "^1.3.0",
     "nodemailer": "*",
     "passport": "*",
     "passport-http": "*",
